--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 
 <head>
   <title>Express</title>
+  <link rel="shortcut icon" href="/images/favicon.ico">
   <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 
